# PredictingUserChurn

./: .gitignore  PrediktingUserChurn.ipynb  README.md  pyproject.toml
configs/: params_and_metrics_101.json  params_and_metrics_102.json  params_and_metrics_103.json  params_and_metrics_104.json  params_and_metrics_105.json  params_and_metrics_106.json  params_and_metrics_107.json  params_and_metrics_108.json  params_and_metrics_109.json  params_and_metrics_110.json  params_and_metrics_111.json  params_and_metrics_112.json  params_and_metrics_113.json  params_and_metrics_114.json  params_and_metrics_115.json  params_and_metrics_116.json  params_and_metrics_117.json  params_and_metrics_118.json  params_and_metrics_119.json  params_and_metrics_120.json  params_and_metrics_121.json  params_and_metrics_122.json  params_and_metrics_123.json  params_and_metrics_124.json  params_and_metrics_125.json  params_and_metrics_126.json  params_and_metrics_127.json  params_and_metrics_128.json  params_and_metrics_129.json  params_and_metrics_130.json  params_and_metrics_131.json  params_and_metrics_132.json  params_and_metrics_133.json  params_and_metrics_134.json  params_and_metrics_135.json  params_and_metrics_136.json  params_and_metrics_137.json  params_and_metrics_138.json  params_and_metrics_139.json  params_and_metrics_140.json  (+161 more)
notebooks/: PrediktingUserChurn.ipynb
