[project]
name = "predictinguserchurn"
version = "0.1.0"
description = ""
authors = [
    {name = "medvedev.r"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "polars (>=1.32.0,<2.0.0)",
    "matplotlib (>=3.10.5,<4.0.0)",
    "numpy (>=2.3.2,<3.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "optuna (>=4.5.0,<5.0.0)",
    "catboost (>=1.2.8,<2.0.0)",
    "charset-normalizer (>=3.4.3,<4.0.0)",
    "imblearn (>=0.0,<0.1)",
    "wand (>=0.6.13,<0.7.0)",
    "notebook (>=7.4.5,<8.0.0)",
    "wandb (>=0.22.0,<0.23.0)",
    "multipledispatch (>=1.0.0,<2.0.0)",
    "pyarrow (>=21.0.0,<22.0.0)",
    "tqdm (>=4.67.1,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
